array.island.Island.scala.error
Compilation error:
Island:5: error: '(' expected but identifier found.
    if num[k]==num[0]{
       ^Island:11: error: illegal start of simple expression
  }
  ^