array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nv=0
  for (k<-1 to lenght(num)){
    if num[k]==num[0]{
      return(island(num[k:]))
    }
    else{
      return(nv+1)
    }
  }
}